# Noreon

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dedc6c7eee7_initial_schema.py  266acee1b8f0_quality_scores_profile_audit_counts.py  4cfc02ed6170_business_concepts_and_mappings.py  6c77ce12453d_users_and_connection_access.py  a1b2c3d4e5f6_conversations_history.py  b2c3d4e5f6a7_spaces_governance.py  c3d4e5f6a7b8_reports.py  d2e85e9ebf20_definitions_alerts_tenant_preferences.py  d4e5f6a7b8c9_space_conversations.py  e5f6a7b8c9d0_tenant_analysis_context.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  db.py  logging.py  security.py
backend/app/llm/: __init__.py  base.py  factory.py  heuristic.py  prompts.py  providers.py
backend/app/models/: __init__.py  alert.py  connection.py  conversation.py  definitions.py  profile.py  quality.py  query_log.py  report.py  schema_catalog.py  semantic.py  space.py  tenant.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: agent.py  alerts.py  analyst.py  charting.py  chat.py  company_context.py  confidence.py  connections.py  deep_analysis.py  definitions.py  (+19 more)
backend/tests/: conftest.py  test_analyst.py  test_auth.py  test_charting.py  test_deep_analysis.py  test_definitions.py  test_heuristic_llm.py  test_integration.py  test_learning.py  test_multisource.py  test_pii.py  test_privacy.py  test_quality.py  test_security.py  test_semantic.py  test_sql_guard.py
(+64 files in other folders)
