[project]
name = "noreon-backend"
version = "0.1.0"
description = "Noreon — Data Analyst IA autonome (backend V0.1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "sqlglot>=25",
    "redis>=5.0",
    "rq>=1.16",
    "httpx>=0.27",
    "pymysql>=1.1",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
